# scrapinghelper

./: README.md  mypy.ini  pyproject.toml  requirements-devel.txt  requirements.txt  setup.py
examples/: check_headers.py  check_ipaddress.py  check_ipaddress_async.py  downloader.py  downloader_links.py  downloader_using_csv.py  get_proxy.py  get_socks_proxy_list.py  top500_list.py  yahoo_finance.py
scraper_tools/: __init__.py  logging.py  scraper.py  url.py
scrapinghelper/: __init__.py  proxy.py  scraper.py  url.py  user_agents.py  utils.py  versions.py
scrapinghelper/data/: 20000 User Agents.csv
scrapper-tools/: __init__.py  scrapper.py
scrapper_tools/: scrapper.py  url.py  versions.py
tests/: proxy_test.csv  test_dict.py  test_proxy.py  test_scraper.py  test_strcase.py  test_url.py  test_useragents.py  test_utils.py  user_agent_test.csv
web_scrapper/: scrapper.py
