[tool.poetry]
name = "scrapper_tools"
version = "0.1.4"
description = "support class for web scraping"
authors = ["Goichi (iisaka) Yukawa <iisaka51@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
